[tool.poetry]
name = "miami"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyjwt = "^2.8.0"
flask = "^2.3.2"
datetime = "^5.2"
flask-sqlalchemy = "^3.0.5"
get-docker-secret = "^2.0.0"
psycopg2-binary = "^2.9.7"
alembic = "^1.11.2"
pytest-flask = "^1.2.0"
waitress = "^2.1.2"
flask-cors = "^4.0.0"
cors = "^1.0.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
