[tool.poetry]
name = "miami"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyjwt = "^2.8.0"
flask = "^3.0.0"
datetime = "^5.2"
flask-sqlalchemy = "^3.1.1"
get-docker-secret = "^2.0.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
pytest-flask = "^1.3.0"
waitress = "^2.1.2"
flask-cors = "^4.0.0"
cors = "^1.0.1"
freezegun = "^1.2.2"
asyncpg = "^0.29.0"
greenlet = "^3.0.1"
coloredlogs = "^15.0.1"
aiohttp = "^3.9.1"
cryptography = "^41.0.7"
flask-socketio = "^5.3.6"
flask-mqtt = "^1.1.1"
gmqtt = "^0.6.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
